<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seccion_Per_Validar"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:background="@color/blau_marino"
            android:theme="@style/Widget.AppCompat.Toolbar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:titleTextColor="@color/white">

            <!-- Icon ImageView -->
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_white"
                android:layout_gravity="center_vertical" />

            <!-- Centered title TextView -->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="center_vertical"
                android:text="  InformaVies CAT"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="26sp"/>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Incidències per validar"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="8dp"
                android:background="@color/blau_clar"
                android:textColor="@color/blau_marino" />

            <!-- Image and Paragraph Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Image -->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/nav_per_validar"/>

                <!-- Paragraph -->
                <TextView
                    android:id="@+id/textViewParagraph"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/abans_de_ser_asignades_a_un_t_cnic_els_nostres_administradors_revisen_i_corroboren_les_incid_ncies_en_aquesta_secci"
                    android:gravity="start|center_vertical"
                    android:paddingStart="16dp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="0dp"
                android:layout_gravity="right|center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_sort_24"/>

                <Spinner
                    android:id="@+id/sortSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@id/textViewParagraph" />

        </LinearLayout>
    </LinearLayout>

    <!-- FrameLayout to overlay FloatingActionButton on top of other views -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ... (your other views) ... -->

        <!-- FloatingActionButton -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/reportarIncidenciaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/blau_clar"
            android:src="@drawable/baseline_add_alert_24"
            app:fabSize="normal" />
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/blau_marino"
        app:itemTextColor="@color/black">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
