...
            android:background="@color/blau_clar" />

    </LinearLayout>


    <ImageView
        android:id="@+id/btnEdit"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_weight="1"
        android:src="@drawable/baseline_mode_edit_outline_24"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
...
