...
        <item
            android:id="@+id/nav_reportar"
            android:icon="@drawable/baseline_add_alert_24"
            android:title="@string/reportar_nova_incid_ncia"/>

        <item
            android:id="@+id/nav_per_validar"
            android:icon="@drawable/nav_per_validar"
            android:title="@string/incidencies_per_validar"/>

        <item
            android:id="@+id/nav_oberta"
            android:icon="@drawable/nav_oberta"
            android:title="@string/incidencies_obertes"/>

        <item
            android:id="@+id/nav_en_progress"
            android:icon="@drawable/nav_en_progress"
            android:title="@string/incidencies_en_progress"/>

        <item
            android:id="@+id/nav_resolta"
            android:icon="@drawable/nav_resolta"
            android:title="@string/incidencies_resoltes"/>

        <item
            android:id="@+id/nav_tancada"
            android:icon="@drawable/nav_tancada"
            android:title="@string/incidencies_tancades"/>



    </group>
...
